<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Deal Browser</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="product_image_content_description">Product Image</string>
    <string name="or">Or</string>
    <string name="ship">Ship</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="aisle">Aisle</string>
    <string name="description">Description</string>
    <string name="add_to_list">add to list</string>
    <string name="add_to_cart">add to cart</string>
    <string name="reg">Reg:</string>
</resources>
